fixed grid into 2 column on mobile

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     color: var(--black);
     background: var(--background);
     line-height: calc(1.1*var(--spacing));
-    padding: var(--spacing);
+    padding: calc(0.5*var(--spacing));
     text-align: center;
     margin-inline: auto;
 }
@@ -91,7 +91,7 @@ h3 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: calc(0.7*var(--spacing));
+    gap: calc(0.5*var(--spacing));
     align-items: center;
     justify-content: center;
     padding-block: calc(2*var(--spacing));
@@ -101,7 +101,7 @@ h3 {
 
 /* to control the size of img */
 .image-controller {
-    inline-size: calc(7*var(--spacing));
+    inline-size: calc(6*var(--spacing));
     block-size: 100%;
     overflow: hidden;
 }
@@ -109,7 +109,7 @@ h3 {
 /* white container */
 .image-box {
     background: var(--grey);
-    padding: calc(0.3*var(--spacing));
+    padding: calc(0.2*var(--spacing));
     display: flex;
     flex-direction: column;
     gap: calc(0.1*var(--spacing));
